# dezswap-contracts

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_release.sh  update_schema.sh
.github/workflows/: release-artifacts.yml  tests.yml
contracts/dezswap_factory/: Cargo.toml  README.md
contracts/dezswap_factory/examples/: schema.rs
contracts/dezswap_factory/schema/: dezswap-factory.json  execute_msg.json
contracts/dezswap_factory/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_pairs.json
contracts/dezswap_factory/src/: contract.rs  state.rs  testing.rs
contracts/dezswap_pair/: Cargo.toml  README.md
contracts/dezswap_pair/examples/: schema.rs
contracts/dezswap_pair/schema/: dezswap-pair.json
contracts/dezswap_pair/schema/raw/: cw20_hook_msg.json  execute.json  instantiate.json  query.json  response_to_pair.json  response_to_pool.json  response_to_reverse_simulation.json  response_to_simulation.json
contracts/dezswap_pair/src/: contract.rs  error.rs  response.rs  state.rs  testing.rs
contracts/dezswap_router/: Cargo.toml  README.md
contracts/dezswap_router/examples/: schema.rs
contracts/dezswap_router/schema/: config_response.json  cw20_hook_msg.json  dezswap-router.json  execute_msg.json  instantiate_msg.json  query_msg.json  swap_operation.json
contracts/dezswap_router/schema/raw/: cw20_hook_msg.json  execute.json  instantiate.json  query.json  response_to_config.json
contracts/dezswap_router/src/: contract.rs  operations.rs  state.rs
contracts/dezswap_router/src/testing/: tests.rs
contracts/dezswap_token/: Cargo.toml  README.md
contracts/dezswap_token/examples/: schema.rs
contracts/dezswap_token/schema/: dezswap-token.json
contracts/dezswap_token/schema/raw/: execute.json  query.json  response_to_all_accounts.json  response_to_all_allowances.json  response_to_all_spender_allowances.json  response_to_allowance.json  response_to_marketing_info.json
contracts/dezswap_token/src/: contract.rs
