[package]
name = "dezswap-factory"
version = "1.2.0"
authors = ["DELIGHT LABS"]
edition = "2018"
description = "A Dezswap factory contract - auto pair contract generator and also directory for all pairs"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
dezswap = { path = "../../packages/dezswap", default-features = false, version = "1.2.0"}
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_2_0"] }
cw-storage-plus = { version = "2.0.0" } 
cw2 = { version = "2.0.0" } 
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
protobuf = { version = "2", features = ["with-bytes"] }
cw20 = { version = "2.0.0" }
sha2 = "0.10.7"

[dev-dependencies]
cosmwasm-schema = { version = "2.2.2" }
