[package]
name = "dezswap-pair"
version = "1.1.0"
authors = ["DELIGHT LABS"]
edition = "2018"
description = "A Dezswap pair contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = { version = "0.13.2" } 
cw20 = { version = "0.13.2" } 
cosmwasm-std = { version = "1.5.2" }
cw-storage-plus = { version = "0.13.2" } 
integer-sqrt = "0.1.5"
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
dezswap = { path = "../../packages/dezswap", default-features = false, version = "1.1.0"}

[dev-dependencies]
cosmwasm-schema = { version = "1.5.2" }
cosmwasm-storage = { version = "1.5.2" }