[package]
name = "dezswap-router"
version = "1.1.0"
authors = ["DELIGHT LABS"]
edition = "2018"
description = "A Dezswap router contract - provides multi-step operations to facilitate single sign operation"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
cw20 = { version = "2.0.0" } 
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_2_0"] }
dezswap = { path = "../../packages/dezswap", default-features = false, version = "1.2.0"}
cw-storage-plus = { version = "2.0.0"}
integer-sqrt = "0.1.5"
cw2 = { version = "2.0.0" } 
cosmwasm-schema = { version = "2.2.2" }

