[package]
name = "dezswap-token"
version = "0.0.0"
authors = ["DELIGHT LABS"]
edition = "2018"
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license = "MIT"
repository = "https://github.com/dezswap/dezswap"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { version = "0.10.3" } 
cw2 = { version = "2.0.0" } 
cw20 = {version = "2.0.0"}
cw20-base = {version = "2.0.0", features = ["library"]}
cw-storage-plus  = { version = "2.0.0" } 
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_2_0"] }
thiserror = { version = "1.0.20" }
dezswap = { path = "../../packages/dezswap", default-features = false, version = "1.2.0"}
cosmwasm-schema = { version = "2.2.2" }
